tests/fixtures/invalid/pow_dict_float_float.py
# Cannot call pow() with Dict[str, int], Float, Float
x = pow({"a": 1}, 1.0, 1.0)
